Source/JavaScriptCore/runtime/Exception.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2015 Apple Inc. All rights reserved.
+ * Copyright (C) 2015-2016 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -77,7 +77,7 @@ void Exception::finishCreation(VM& vm, JSValue thrownValue, StackCaptureAction a
     Vector<StackFrame> stackTrace;
     if (action == StackCaptureAction::CaptureStack)
         vm.interpreter->getStackTrace(stackTrace);
-    m_stack = RefCountedArray<StackFrame>(stackTrace);
+    m_stack = WTFMove(stackTrace);
 }
 
 } // namespace JSC
